# rss2fax

./: .gitignore  Readme.md  pyproject.toml  rss2fax.py  shell.nix
rss2fax/: __main__.py  cmdline.py  config.py  fetch.py  render.py  utils.py
rss2fax/resources/: article.html  base.html  main.css  main.html  site.html
