[tool.poetry]
name = "rss2fax"
version = "0.1.0"
description = "RSS to FAX gateway using RogerRouter"
authors = ["Johannes Schriewer <hallo@dunkelstern.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "^6.0.11"
selenium = "^4.19.0"
jinja2 = "^3.1.3"
xdg-base-dirs = "^6.0.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
